    git submodule foreach git annex init
  * testremote: Display exceptions when tests fail, to aid debugging.
  * Windows build changed to one done by the datalad-extensions project
    using Github actions.
  * Windows build now includes libmagic, so mimetype and mimeencoding
    will work.
    Thanks to John Thorvald Wodder II and Yaroslav Halchenko for their work
    on this.

 -- Joey Hess <id@joeyh.name>  Thu, 08 Oct 2020 10:48:17 -0400

git-annex (8.20201007) upstream; urgency=medium

  * --json output now includes a new field "input" which is the input
    value (filename, url, etc) that caused a json object to be output.
  * --batch combined with -J now runs batch requests concurrently for many
    commands. Before, the combination was accepted, but did not enable
    concurrency. Since the output of batch requests can be in any order,
    --json with the new "input" field is recommended to be used,
    to determine which batch request each response corresponds to.
  * aws-0.22 improved its support for setting etags, which improves
    support for versioned S3 buckets.
  * Serialize use of C magic library, which is not thread safe.
    This fixes failures uploading to S3 when using -J.
  * add, addurl, importfeed, import: Added --no-check-gitignore option
    for finer grained control than using --force.
  * import: Check gitignores when importing trees from special remotes.
  * addunused: Don't check .gitignores when adding files.
  * Improve the "Try making some of these repositories available"
    message, with some hints for the user for what to do.
  * Improve --debug output to show pid of processes that are started and
    stopped.
  * sync --all: Sped up seeking to around twice as fast, by avoiding a
    pass over the worktree files when preferred content expressions of the
    local repo and remotes don't use include=/exclude=.
  * Sped up seeking for files to operate on, when using options like
    --copies or --in, by around 20%